third_party/move/move-prover/tests/sources/functional/inline-lambda.exp
Move prover returns: exiting with verification errors
error: unknown assertion failed
  ┌─ tests/sources/functional/inline-lambda.move:5:13
  │
5 │             assert predicate(v);
  │             ^^^^^^^^^^^^^^^^^^^^
  │
  =     at tests/sources/functional/inline-lambda.move:10: test_apply
  =         a1 = <redacted>
  =         a2 = <redacted>
  =     at tests/sources/functional/inline-lambda.move:11: test_apply
  =         v#0 = <redacted>
  =     at tests/sources/functional/inline-lambda.move:4
  =     at tests/sources/functional/inline-lambda.move:5
  =     at tests/sources/functional/inline-lambda.move:11: test_apply
  =         r1 = <redacted>
  =     at tests/sources/functional/inline-lambda.move:13: test_apply
  =     at tests/sources/functional/inline-lambda.move:16: test_apply
  =         v#3 = <redacted>
  =     at tests/sources/functional/inline-lambda.move:4
  =     at tests/sources/functional/inline-lambda.move:5

error: unknown assertion failed
   ┌─ tests/sources/functional/inline-lambda.move:18:13
   │
18 │             assert !r2;
   │             ^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:10: test_apply
   =         a1 = <redacted>
   =         a2 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:11: test_apply
   =         v#0 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:4
   =     at tests/sources/functional/inline-lambda.move:5
   =     at tests/sources/functional/inline-lambda.move:11: test_apply
   =         r1 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:13: test_apply
   =     at tests/sources/functional/inline-lambda.move:16: test_apply
   =         v#3 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:4
   =     at tests/sources/functional/inline-lambda.move:5
   =     at tests/sources/functional/inline-lambda.move:16: test_apply
   =         r2 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:18: test_apply
